# sipX3CXPhone

./: .project  build.xml  configure.ac  sipx3cxphoen.spec.in
etc/: Makefile.am
src/: Makefile.am  common.am  sipxplugin.beans.xml
src/org/sipfoundry/sipxconfig/phone/3cx/: 3cxConstants.java  3cxPhoneDefaults.java
test/: Makefile.am
